# spmlex

./: .gitignore  README.md  pyproject.toml
docs/: README.md  README.qmd
src/spmlex/: __init__.py  profile_lk.py
tests/: conftest.py  test_profile_ll.py
