[project]
name = "spmlex"
description = "Semi-parametric maximum likelihood estimation using the mixsqp algorithm and jax"
readme = "README.md"
authors = [{ name = "Paul Diegert", email = "pdiegert@gmail.com" }]
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [ "jaxlib>=0.5.0,<=0.6.0", "jax>=0.5.0,<=0.6.0", "equinox>=0.11.12,<0.12", "mixsqpx==0.1.1"
]

[dependency-groups]
dev = ["build>=1.2.2.post1,<2", "jaxopt>=0.8.5,<0.9"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
spmlex = { path = ".", editable = true}

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.dependencies]
numpy = ">=2.2.5,<3"


[tool.pixi.feature.dev.dependencies]
pandas = ">=2.2.3,<3"
matplotlib = ">=3.10.1,<4"
seaborn = ">=0.13.2,<0.14"
pytest = ">=8.3.5,<9"
ipykernel = ">=6.29.5,<7"
pyyaml = ">=6.0.2,<7"
yaml = ">=0.2.5,<0.3"
nbformat = ">=5.10.4,<6"
nbclient = ">=0.10.2,<0.11"

[tool.pixi.feature.dev.tasks]
test = "pytest -s tests -p no:warnings"
build = "python -m build"
ipykernel = "python -m ipykernel install --user --name spmlex"

[tool.pixi.pypi-options]
index-url = "https://test.pypi.org/simple/"
extra-index-urls = ["https://pypi.org/simple/"]